# project-0xfffff

./: .coverage  .env.local  .gitignore  .spec-coverage-baseline.json  ANNOTATION_EDITING_FIX.md  AUTHENTICATION_FIX.md  CODEOWNERS.txt  COMMENT_NEWLINE_HANDLING.md  CONTEXT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  RUBRIC_FORMAT_UPDATE.md  alembic.ini  app.yaml  coverage.xml  deploy.sh  e2e-test-output.txt  facilitator_guide_images  justfile  mlflow.db.bak  process_sqllite_db_mlflow.py  pyproject.toml  requirements.txt  setup.sh  vulture_whitelist.py
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: spec-tester.md
.claude/commands/: verify.md
.claude/hooks/: session-start
.claude/plans/: 2026-04-16-fully-wired-eval-mode-mvp.md  2026-04-22-dnb-hotfix-trace-display.md  2026-04-23-dnb-hotfix-mlflow-edit-overwrite.md  2026-04-24-dnb-hotfix-per-judge-rationale.md  2026-04-24-memalign-duplicate-guidelines-fix.md  2026-04-27-v2-first-principles-architecture.md  2026-04-28-v2-workshop-creation-refactor.md
.cursor/rules/: always-use-uv.mdc  use-just-recipes.mdc
.cursor/skills/: mlflow-genai-evaluation.md  mlflow-genai-tracing.md  mlflow-genai.md
.databricks/sync-snapshots/: ec76430268c838b6.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: documentation.md
.github/workflows/: e2e-test.yml  release-build.yml  release.yml  spec-verification.yml
client/: .npmrc  EXHAUSTIVE_DEPS_ANALYSIS.md  eslint.config.js  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  tsconfig.eslint.json  vite.config.ts  vite.config.ts.timestamp-1768838215376-66642caaea0b4.mjs
client/src/: App.tsx  AppShellPathBar.test.tsx  index.css  main.tsx
client/tests/: login-redirection.spec.ts
debt-docs/: ARCHITECTURE_DEBT.md  CODE_QUALITY_DEBT.md  COMPLEXITY_DEBT.md  DEPENDENCY_DEBT.md  DEPLOYMENT_DEBT.md  DX_DEBT.md  PERFORMANCE_DEBT.md  REACT_PATTERNS_DEBT.md  README.md  SECURITY_DEBT.md  TESTING_DEBT.md  TOOLING_PATTERNS_DEBT.md  WORKSHOP_ID_SIMPLIFICATION.md
doc/: BUILD_GUIDE.md  CHANGELOG.md  COLOR_THEME_GUIDE.md  DB_MIGRATIONS.md  DISCOVERY.md  FACILITATOR_GUIDE.md  README.md  README_Pagination.md  README_TraceDataViewer.md  RELEASE_NOTES.md  TRACE_RANDOMIZATION.md  UNIT_TESTING.md  VERSION_1.3_RELEASE.md
docs/adr/: 0001-provider-resolved-app-identity.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_baseline.py  0002_legacy_schema_fixes.py  0003_judge_schema_updates.py  0004_add_randomization_columns.py  0004_discovery_questions_model.py  0005_add_jsonpath_columns.py  0005_discovery_questions_table.py  0006_add_auto_evaluation_columns.py  0006_discovery_questions_model.py  0006_discovery_summaries_table.py  0007_add_custom_llm_provider_config.py  0007_discovery_question_category.py  0007_discovery_questions_table.py  0008_add_auto_evaluation_model.py  0008_add_randomization_columns.py  0008_discovery_summaries_table.py  0009_discovery_question_category.py  0009_make_users_workshop_id_nullable.py  0010_add_participant_notes.py  0010_discovery_findings_category.py  0011_add_phase_to_participant_notes.py  0012_add_discovery_feedback_and_analysis.py  0012_add_discovery_feedback_table.py  0012_add_prompt_optimization_runs.py  0013_add_optimized_uri_to_optimization_runs.py  0013_merge_heads.py  0014_add_discovery_analysis_table.py  0014_add_target_endpoint_to_optimization_runs.py  0014_update_draft_rubric_items.py  0015_add_span_attribute_filter.py  0015_merge_analysis_and_draft_rubric.py  0016_add_span_attribute_filter.py  0017_remove_databricks_host.py  0018_add_summarization_jobs.py  0019_add_annotation_rationales.py  0f8f0efbbe57_add_assisted_facilitation_v2_tables.py
notebooks/: README.md  generate_discovery_traces.ipynb  synthetic_trace_dspy.py
server/: app.py  config.py  database.py  db_bootstrap.py  db_config.py  models.py  postgres_manager.py  sqlite_rescue.py
server/routers/: __init__.py  databricks.py  dbsql_export.py  discovery.py  eval_mode.py  users.py  (+1 more)
specs/: ANNOTATION_SPEC.md  ASSISTED_FACILITATION_SPEC.md  AUTHENTICATION_SPEC.md  BUILD_AND_DEPLOY_SPEC.md  CUSTOM_LLM_PROVIDER_SPEC.md  DATASETS_SPEC.md  DESIGN_SYSTEM_SPEC.md  DISCOVERY_SPEC.md  DISCOVERY_TRACE_ASSIGNMENT_SPEC.md  EVAL_MODE_SPEC.md  HUMAN_AGREEMENT_SPEC.md  JUDGE_EVALUATION_SPEC.md  PROJECT_SETUP_SPEC.md  PROMPT_OPTIMIZATION_SPEC.md  README.md  ROLE_PERMISSIONS_SPEC.md  RUBRIC_SPEC.md  SPEC_COVERAGE_GUIDE.md  SPEC_COVERAGE_MAP.md  TESTING_SPEC.md  TRACE_DISPLAY_SPEC.md  TRACE_INGESTION_SPEC.md  TRACE_SUMMARIZATION_SPEC.md  UI_COMPONENTS_SPEC.md
tests/: conftest.py  test_concurrent_annotations.py
tools/: __init__.py  collect_pytest_markers.py  spec_coverage_analyzer.py  spec_coverage_gate.py  spec_tagging_validator.py  test_summary.py
(+372 files in other folders)
